// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`object fields additionalProperties 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-object"
    id="root"
    style={
      Object {
        "display": undefined,
        "marginBottom": 15,
      }
    }
  >
    
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm12  field field-string"
          id="root_foo"
          style={
            Object {
              "display": undefined,
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-42"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <label
                className="ms-Label root-53"
                htmlFor="root_foo"
                id="TextFieldLabel11"
              >
                foo
              </label>
              <div
                className="ms-TextField-fieldGroup fieldGroup-43"
              >
                <input
                  aria-describedby="root_foo__error root_foo__description root_foo__help"
                  aria-invalid={false}
                  aria-labelledby="TextFieldLabel11"
                  autoFocus={false}
                  className="ms-TextField-field field-44"
                  disabled={false}
                  id="root_foo"
                  name="root_foo"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  type="text"
                  value="foo"
                />
              </div>
            </div>
          </div>
          
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-54"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-55"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-56"
          >
            <span
              className="ms-Button-label label-58"
              id="id__12"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`object fields object 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-object"
    id="root"
    style={
      Object {
        "display": undefined,
        "marginBottom": 15,
      }
    }
  >
    
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm12  field field-string"
          id="root_a"
          style={
            Object {
              "display": undefined,
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-42"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <label
                className="ms-Label root-53"
                htmlFor="root_a"
                id="TextFieldLabel2"
              >
                A
              </label>
              <div
                className="ms-TextField-fieldGroup fieldGroup-43"
              >
                <input
                  aria-describedby="root_a__error root_a__description root_a__help"
                  aria-invalid={false}
                  aria-labelledby="TextFieldLabel2"
                  autoFocus={false}
                  className="ms-TextField-field field-44"
                  disabled={false}
                  id="root_a"
                  name="root_a"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          
        </div>
        <div
          className="ms-Grid-col ms-sm12  field field-number"
          id="root_b"
          style={
            Object {
              "display": undefined,
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-42"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <label
                className="ms-Label root-53"
                htmlFor="root_b"
                id="TextFieldLabel5"
              >
                B
              </label>
              <div
                className="ms-TextField-fieldGroup fieldGroup-43"
              >
                <input
                  aria-describedby="root_b__error root_b__description root_b__help"
                  aria-invalid={false}
                  aria-labelledby="TextFieldLabel5"
                  autoFocus={false}
                  className="ms-TextField-field field-44"
                  disabled={false}
                  id="root_b"
                  name="root_b"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  step="any"
                  type="number"
                  value=""
                />
              </div>
            </div>
          </div>
          
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-54"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-55"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-56"
          >
            <span
              className="ms-Button-label label-58"
              id="id__6"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`object fields with title and description additionalProperties 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-object"
    id="root"
    style={
      Object {
        "display": undefined,
        "marginBottom": 15,
      }
    }
  >
    <label
      className="ms-Label root-62"
      id="root__title"
    >
      Test field
    </label>
    <span
      className="css-63"
      id="root__description"
    >
      a test description
    </span>
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm12  field field-string"
          id="root_foo"
          style={
            Object {
              "display": undefined,
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-42"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <label
                className="ms-Label root-53"
                htmlFor="root_foo"
                id="TextFieldLabel26"
              >
                foo
              </label>
              <div
                className="ms-TextField-fieldGroup fieldGroup-43"
              >
                <input
                  aria-describedby="root_foo__error root_foo__description root_foo__help"
                  aria-invalid={false}
                  aria-labelledby="TextFieldLabel26"
                  autoFocus={false}
                  className="ms-TextField-field field-44"
                  disabled={false}
                  id="root_foo"
                  name="root_foo"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  type="text"
                  value="foo"
                />
              </div>
            </div>
          </div>
          
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-54"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-55"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-56"
          >
            <span
              className="ms-Button-label label-58"
              id="id__27"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`object fields with title and description from both additionalProperties 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-object"
    id="root"
    style={
      Object {
        "display": undefined,
        "marginBottom": 15,
      }
    }
  >
    <label
      className="ms-Label root-62"
      id="root__title"
    >
      My Field
    </label>
    <span
      className="css-63"
      id="root__description"
    >
      a fancier description
    </span>
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm12  field field-string"
          id="root_foo"
          style={
            Object {
              "display": undefined,
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-42"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <label
                className="ms-Label root-53"
                htmlFor="root_foo"
                id="TextFieldLabel56"
              >
                foo
              </label>
              <div
                className="ms-TextField-fieldGroup fieldGroup-43"
              >
                <input
                  aria-describedby="root_foo__error root_foo__description root_foo__help"
                  aria-invalid={false}
                  aria-labelledby="TextFieldLabel56"
                  autoFocus={false}
                  className="ms-TextField-field field-44"
                  disabled={false}
                  id="root_foo"
                  name="root_foo"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  type="text"
                  value="foo"
                />
              </div>
            </div>
          </div>
          
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-54"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-55"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-56"
          >
            <span
              className="ms-Button-label label-58"
              id="id__57"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`object fields with title and description from both object 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-object"
    id="root"
    style={
      Object {
        "display": undefined,
        "marginBottom": 15,
      }
    }
  >
    <label
      className="ms-Label root-62"
      id="root__title"
    >
      My Field
    </label>
    <span
      className="css-63"
      id="root__description"
    >
      a fancier description
    </span>
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm12  field field-string"
          id="root_a"
          style={
            Object {
              "display": undefined,
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-42"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <label
                className="ms-Label root-53"
                htmlFor="root_a"
                id="TextFieldLabel47"
              >
                My Item A
              </label>
              <div
                className="ms-TextField-fieldGroup fieldGroup-43"
              >
                <input
                  aria-describedby="root_a__error root_a__description root_a__help"
                  aria-invalid={false}
                  aria-labelledby="TextFieldLabel47"
                  autoFocus={false}
                  className="ms-TextField-field field-44"
                  disabled={false}
                  id="root_a"
                  name="root_a"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <span
            className="css-63"
          >
            a fancier item A description
          </span>
        </div>
        <div
          className="ms-Grid-col ms-sm12  field field-number"
          id="root_b"
          style={
            Object {
              "display": undefined,
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-42"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <label
                className="ms-Label root-53"
                htmlFor="root_b"
                id="TextFieldLabel50"
              >
                My Item B
              </label>
              <div
                className="ms-TextField-fieldGroup fieldGroup-43"
              >
                <input
                  aria-describedby="root_b__error root_b__description root_b__help"
                  aria-invalid={false}
                  aria-labelledby="TextFieldLabel50"
                  autoFocus={false}
                  className="ms-TextField-field field-44"
                  disabled={false}
                  id="root_b"
                  name="root_b"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  step="any"
                  type="number"
                  value=""
                />
              </div>
            </div>
          </div>
          <span
            className="css-63"
          >
            a fancier item B description
          </span>
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-54"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-55"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-56"
          >
            <span
              className="ms-Button-label label-58"
              id="id__51"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`object fields with title and description from uiSchema additionalProperties 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-object"
    id="root"
    style={
      Object {
        "display": undefined,
        "marginBottom": 15,
      }
    }
  >
    <label
      className="ms-Label root-62"
      id="root__title"
    >
      My Field
    </label>
    <span
      className="css-63"
      id="root__description"
    >
      a fancier description
    </span>
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm12  field field-string"
          id="root_foo"
          style={
            Object {
              "display": undefined,
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-42"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <label
                className="ms-Label root-53"
                htmlFor="root_foo"
                id="TextFieldLabel41"
              >
                foo
              </label>
              <div
                className="ms-TextField-fieldGroup fieldGroup-43"
              >
                <input
                  aria-describedby="root_foo__error root_foo__description root_foo__help"
                  aria-invalid={false}
                  aria-labelledby="TextFieldLabel41"
                  autoFocus={false}
                  className="ms-TextField-field field-44"
                  disabled={false}
                  id="root_foo"
                  name="root_foo"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  type="text"
                  value="foo"
                />
              </div>
            </div>
          </div>
          
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-54"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-55"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-56"
          >
            <span
              className="ms-Button-label label-58"
              id="id__42"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`object fields with title and description from uiSchema object 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-object"
    id="root"
    style={
      Object {
        "display": undefined,
        "marginBottom": 15,
      }
    }
  >
    <label
      className="ms-Label root-62"
      id="root__title"
    >
      My Field
    </label>
    <span
      className="css-63"
      id="root__description"
    >
      a fancier description
    </span>
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm12  field field-string"
          id="root_a"
          style={
            Object {
              "display": undefined,
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-42"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <label
                className="ms-Label root-53"
                htmlFor="root_a"
                id="TextFieldLabel32"
              >
                My Item A
              </label>
              <div
                className="ms-TextField-fieldGroup fieldGroup-43"
              >
                <input
                  aria-describedby="root_a__error root_a__description root_a__help"
                  aria-invalid={false}
                  aria-labelledby="TextFieldLabel32"
                  autoFocus={false}
                  className="ms-TextField-field field-44"
                  disabled={false}
                  id="root_a"
                  name="root_a"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <span
            className="css-63"
          >
            a fancier item A description
          </span>
        </div>
        <div
          className="ms-Grid-col ms-sm12  field field-number"
          id="root_b"
          style={
            Object {
              "display": undefined,
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-42"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <label
                className="ms-Label root-53"
                htmlFor="root_b"
                id="TextFieldLabel35"
              >
                My Item B
              </label>
              <div
                className="ms-TextField-fieldGroup fieldGroup-43"
              >
                <input
                  aria-describedby="root_b__error root_b__description root_b__help"
                  aria-invalid={false}
                  aria-labelledby="TextFieldLabel35"
                  autoFocus={false}
                  className="ms-TextField-field field-44"
                  disabled={false}
                  id="root_b"
                  name="root_b"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  step="any"
                  type="number"
                  value=""
                />
              </div>
            </div>
          </div>
          <span
            className="css-63"
          >
            a fancier item B description
          </span>
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-54"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-55"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-56"
          >
            <span
              className="ms-Button-label label-58"
              id="id__36"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`object fields with title and description object 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-object"
    id="root"
    style={
      Object {
        "display": undefined,
        "marginBottom": 15,
      }
    }
  >
    <label
      className="ms-Label root-62"
      id="root__title"
    >
      Test field
    </label>
    <span
      className="css-63"
      id="root__description"
    >
      a test description
    </span>
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm12  field field-string"
          id="root_a"
          style={
            Object {
              "display": undefined,
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-42"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <label
                className="ms-Label root-53"
                htmlFor="root_a"
                id="TextFieldLabel17"
              >
                A
              </label>
              <div
                className="ms-TextField-fieldGroup fieldGroup-43"
              >
                <input
                  aria-describedby="root_a__error root_a__description root_a__help"
                  aria-invalid={false}
                  aria-labelledby="TextFieldLabel17"
                  autoFocus={false}
                  className="ms-TextField-field field-44"
                  disabled={false}
                  id="root_a"
                  name="root_a"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <span
            className="css-63"
          >
            A description
          </span>
        </div>
        <div
          className="ms-Grid-col ms-sm12  field field-number"
          id="root_b"
          style={
            Object {
              "display": undefined,
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-42"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <label
                className="ms-Label root-53"
                htmlFor="root_b"
                id="TextFieldLabel20"
              >
                B
              </label>
              <div
                className="ms-TextField-fieldGroup fieldGroup-43"
              >
                <input
                  aria-describedby="root_b__error root_b__description root_b__help"
                  aria-invalid={false}
                  aria-labelledby="TextFieldLabel20"
                  autoFocus={false}
                  className="ms-TextField-field field-44"
                  disabled={false}
                  id="root_b"
                  name="root_b"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  step="any"
                  type="number"
                  value=""
                />
              </div>
            </div>
          </div>
          <span
            className="css-63"
          >
            B description
          </span>
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-54"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-55"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-56"
          >
            <span
              className="ms-Button-label label-58"
              id="id__21"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`object fields with title and description with global label off additionalProperties 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-object"
    id="root"
    style={
      Object {
        "display": undefined,
        "marginBottom": 15,
      }
    }
  >
    
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm12  field field-string"
          id="root_foo"
          style={
            Object {
              "display": undefined,
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-42"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <div
                className="ms-TextField-fieldGroup fieldGroup-43"
              >
                <input
                  aria-describedby="root_foo__error root_foo__description root_foo__help"
                  aria-invalid={false}
                  autoFocus={false}
                  className="ms-TextField-field field-44"
                  disabled={false}
                  id="root_foo"
                  name="root_foo"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  type="text"
                  value="foo"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-54"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-55"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-56"
          >
            <span
              className="ms-Button-label label-58"
              id="id__72"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`object fields with title and description with global label off object 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-object"
    id="root"
    style={
      Object {
        "display": undefined,
        "marginBottom": 15,
      }
    }
  >
    
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm12  field field-string"
          id="root_a"
          style={
            Object {
              "display": undefined,
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-42"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <div
                className="ms-TextField-fieldGroup fieldGroup-43"
              >
                <input
                  aria-describedby="root_a__error root_a__description root_a__help"
                  aria-invalid={false}
                  autoFocus={false}
                  className="ms-TextField-field field-44"
                  disabled={false}
                  id="root_a"
                  name="root_a"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="ms-Grid-col ms-sm12  field field-number"
          id="root_b"
          style={
            Object {
              "display": undefined,
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-42"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <div
                className="ms-TextField-fieldGroup fieldGroup-43"
              >
                <input
                  aria-describedby="root_b__error root_b__description root_b__help"
                  aria-invalid={false}
                  autoFocus={false}
                  className="ms-TextField-field field-44"
                  disabled={false}
                  id="root_b"
                  name="root_b"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  step="any"
                  type="number"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-54"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-55"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-56"
          >
            <span
              className="ms-Button-label label-58"
              id="id__66"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;
